objects/TestHarnessDeployed__e.object
<CustomObject>
    <description>Indicates deployment of TestHarness</description>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>Includes alphanumeric characters like label and a version number</description>
        <label>DeveloperName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_of_Test_Harness__c</fullName>
        <label>ID of Test Harness</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Message__c</fullName>
        <label>Result Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestHarnessDeployed</label>
    <pluralLabel>TestHarnessDeployments</pluralLabel>
</CustomObject>